--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
-    // h2 in memory database
-    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
+    compile 'mysql:mysql-connector-java'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.6'
 }
